--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1250,6 +1250,14 @@ main.blue-contract .section.section-with-title p {
   width: 24px;
 }
 
+.redesign-v2 .pretitle {
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-size: var(--f-subtitle-2-font-size);
+  letter-spacing: var(--f-subtitle-2-letter-spacing);
+  line-height: var(--f-subtitle-2-line-height);
+  color: var(--c-grey-3);
+}
+
 @media (min-width: 1200px) {
   :root {
     --nav-height: 64px;
@@ -1264,12 +1272,10 @@ main.blue-contract .section.section-with-title p {
   .redesign-v2 .section div.full-width {
     margin: 0;
   }
-}
 
-/*
-  REMOVE AFTER MERGING
-  https://github.com/Netcentric/vg-volvotrucks-us-rd/pull/81
-*/
-.section.dark-backgrond {
-  background: var(--c-main-black);
+  .redesign-v2 .pretitle {
+    font-size: var(--f-heading-5-font-size);
+    letter-spacing: var(--f-heading-5-letter-spacing);
+    line-height: var(--f-heading-5-line-height);
+  }
 }
