--- a/blocks/v2-forms/v2-forms.css
+++ b/blocks/v2-forms/v2-forms.css
@@ -1,3 +1,25 @@
-.v2-forms {
-  background-color: white;
+.v2-forms__floating-label-group {
+  margin-bottom: 25px;
+  margin-top: 15px;
+  position: relative;
+}
+
+.v2-forms__floating-label {
+  color: #ccc;
+  font-size: 13px;
+  left: 12px;
+  pointer-events: none;
+  position: absolute;
+  top: 9px;
+  transition: all 0.1s ease;
+}
+
+.v2-forms__floating-label-group input:focus ~ .v2-forms__floating-label,
+.v2-forms__floating-label-group input:not(:focus):valid ~ .v2-forms__floating-label {
+  bottom: 0;
+  color: #404040;
+  font-size: 11px;
+  left: 0;
+  opacity: 1;
+  top: -15px;
 }
