--- a/blocks/v2-forms/v2-forms.css
+++ b/blocks/v2-forms/v2-forms.css
@@ -1,25 +1,24 @@
 .v2-forms__floating-label-group {
-  margin-bottom: 25px;
-  margin-top: 15px;
+  margin-bottom: 35px;
+  margin-top: 35px;
   position: relative;
 }
 
 .v2-forms__floating-label {
-  color: #ccc;
-  font-size: 13px;
-  left: 12px;
+  left: var(--input-padding);
   pointer-events: none;
   position: absolute;
-  top: 9px;
-  transition: all 0.1s ease;
+  top: 50%;
+  transform: translateY(-50%);
+  transition:
+    top var(--duration-small) var(--easing-standard),
+    left var(--duration-small) var(--easing-standard);
 }
 
 .v2-forms__floating-label-group input:focus ~ .v2-forms__floating-label,
+.v2-forms__floating-label-group input:not(:placeholder-shown) ~ .v2-forms__floating-label,
 .v2-forms__floating-label-group input:not(:focus):valid ~ .v2-forms__floating-label {
   bottom: 0;
-  color: #404040;
-  font-size: 11px;
   left: 0;
-  opacity: 1;
-  top: -15px;
+  top: 3px;
 }
