--- a/blocks/v2-masonry-grid/v2-masonry-grid.css
+++ b/blocks/v2-masonry-grid/v2-masonry-grid.css
@@ -25,6 +25,8 @@
 
 .v2-masonry-grid__item {
   position: relative;
+  border-radius: var(--border-radius);
+  overflow: hidden;
 }
 
 .v2-masonry-grid__item:nth-child(1) { grid-area: big-landscape; }
