#42 Update block according to newest designs

--- a/blocks/key-facts/key-facts.css
+++ b/blocks/key-facts/key-facts.css
@@ -3,7 +3,7 @@
 }
 
 .key-facts {
-  padding: 24px 0;
+  padding: 8px 0;
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -14,32 +14,49 @@
   justify-content: center;
   padding: 0;
   flex-flow: row wrap;
-  gap: 32px
+  row-gap: 32px;
+  column-gap: 8px;
 }
 
 .key-facts__key-item {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  width: calc(50% - 4px);
+  justify-content: center;
 }
 
 .key-facts__key-item p {
   margin: 0;
 }
 
-.key-facts__number-wrapper {
+.key-facts .key-facts__main-text-wrapper {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
   color: var(--c-cta-blue-default);
   width: 100%;
+  font-size: var(--f-heading-3-5-font-size);
+  letter-spacing: var(--f-heading-3-5-letter-spacing);
+  line-height: var(--f-heading-3-5-line-height);
 }
 
-.key-facts__number {
+.key-facts .key-facts__main-text-wrapper--small {
+  font-size: var(--f-heading-5-font-size);
+  letter-spacing: var(--f-heading-5-letter-spacing);
+  line-height: var(--f-heading-5-line-height);
+}
+
+.key-facts__main-text-wrapper .key-facts__main-text {
   display: flex;
+  font-family: var(--ff-volvo-novum);
 }
 
-.key-facts__number--small {
+.key-facts__main-text--small {
+  font-size: 0.75em;
+}
+
+.key-facts__main-text--extra-small {
   font-size: 0.5em;
 }
 
@@ -57,12 +74,16 @@
 }
 
 .key-facts--trailing-line .key-facts__trailing-line::before {
-  content: " ";
+  content: ' ';
   display: block;
   margin: 0 auto;
   width: 50px;
   padding-top: 30px;
   border-top: 3px solid var(--c-grey-1);
+}
+
+.key-facts__image-cell {
+  width: 100%;
 }
 
 .key-facts__image-cell img {
@@ -72,12 +93,9 @@
   overflow: hidden;
 }
 
-.key-facts__row .block.embed {
+.key-facts__row .block.embed,
+.key-facts__row .embed-video {
   width: 100%;
-}
-
-.key-facts--with-media .key-facts__key-item {
-  width: calc(50% - 16px);
 }
 
 @media (min-width: 744px) {
@@ -85,44 +103,74 @@
     gap: 48px;
   }
 
+  .key-facts__key-item {
+    width: 25%;
+  }
+
+  .key-facts--with-media .key-facts__row {
+    gap: 16px;
+    flex-wrap: nowrap;
+  }
+
   .key-facts--with-media .key-facts__key-item {
-    width: auto;
+    width: 25%;
   }
 }
 
 @media (min-width: 1200px) {
+  .key-facts {
+    align-items: center;
+  }
+
+  .key-facts .key-facts__main-text-wrapper {
+    font-size: var(--f-heading-2-font-size);
+    letter-spacing: var(--f-heading-2-letter-spacing);
+    line-height: var(--f-heading-2-line-height);
+  }
+
+  .key-facts .key-facts__main-text-wrapper--small {
+    font-size: var(--f-heading-3-5-font-size);
+    letter-spacing: var(--f-heading-3-5-letter-spacing);
+    line-height: var(--f-heading-3-5-line-height);
+  }
+
   .key-facts--with-media {
     flex-direction: row;
     gap: 40px;
   }
 
   .key-facts__row {
-    gap: 80px;
+    width: 100%;
+    max-width: var(--wrapper-width);
+    gap: unset;
+    justify-content: space-evenly;
   }
 
   .key-facts--with-media .key-facts__row {
     flex-direction: column;
     margin: 40px 0;
-    gap: unset;
     justify-content: space-between;
     width: auto;
+    max-width: unset;
+  }
+
+  .key-facts--with-media .key-facts__row:not(.key-facts__row--with-media) {
+    min-width: 27%;
+    width: 27%;
+    align-self: stretch;
   }
 
   .key-facts--with-media .key-facts__key-item {
-    width: max-content;
+    width: auto;
     text-align: left;
   }
 
-  .key-facts--with-media .key-facts__number-wrapper {
+  .key-facts--with-media .key-facts__main-text-wrapper {
     justify-content: left;
   }
 
   .key-facts__row.key-facts__row--with-media {
     flex-grow: 1;
     margin: 0;
-  }
-
-  .key-facts--with-media .embed-video {
-    width: auto;
   }
 }
