--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,11 @@
   --f-heading-3-letter-spacing: 0;
   --f-heading-3-line-height: 110%;
 
+  /* Section Header/Heading 3.5 */
+  --f-heading-3-5-font-size: 2rem;
+  --f-heading-3-5-letter-spacing: 0;
+  --f-heading-3-5-line-height: 125%;
+
   /* Volvo Novum Web Latin, 32px / 2rem, Medium, 0.25px / 0.016rem, 125% */
   --f-heading-4-font-size: 2rem; /* 32px */
   --f-heading-4-letter-spacing: 0.016rem;
@@ -1025,6 +1030,7 @@ main.blue-contract .section.section-with-title p {
   --text-color: var(--c-white);
   --card-background: var(--c-grey-900);
   --card-text: var(--c-white);
+  --c-cta-blue-default: #44A1FF;
 
   color: var(--text-color);
   background-color: var(--c-main-black);
